# CMake-Note

find_package/find_package_CURL/: CMakeLists.txt  main.cpp
find_package/find_package_custom_by_module/: CMakeLists.txt  main.cpp
find_package/find_package_custom_by_module/cmake/: FindLibA.cmake  FindLibB.cmake
find_package/find_package_custom_by_module/libA/: CMakeLists.txt
find_package/find_package_custom_by_module/libA/include/: TestClassA.h
find_package/find_package_custom_by_module/libA/src/: TestClassA.cpp
find_package/find_package_custom_by_module/libB/: CMakeLists.txt
find_package/find_package_custom_by_module/libB/include/: TestClassB.h
find_package/find_package_custom_config/: CMakeLists.txt  main.cpp
find_package/find_package_custom_config/libA/: CMakeLists.txt
first/: CMakeLists.txt  main.cpp
generate_lib/dynamic_lib/: CMakeLists.txt
generate_lib/dynamic_lib/src/: TestClass.h
generate_lib/static_lib/: CMakeLists.txt
generate_lib/use_lib/: CMakeLists.txt  main.cpp
generate_lib/use_lib/src/: TestClass.cpp  TestClass.h
generate_lib/库依赖关系传递/: CMakeLists.txt  main.cpp
generate_lib/库依赖关系传递/src_libA/: CMakeLists.txt  TestClassA.cpp  TestClassA.h
generate_lib/库依赖关系传递/src_libB/: CMakeLists.txt  TestClassB.cpp  TestClassB.h
install/first/: CMakeLists.txt
install/second/: CMakeLists.txt
install/second/app/: CMakeLists.txt  main.cpp
install/second/libA/: CMakeLists.txt
install/second/libB/: CMakeLists.txt
install/second/libB/src/: TestClassB.cpp
